samples/_failures_safe/1761350966_21842b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2d667271.c: In function ‘main’:
./samples/SAFE/__tmp_2d667271.c:166:5: error: expected declaration or statement at end of input
  166 |     if (len >= sizeof(input) - 1) {
      |     ^~
./samples/SAFE/__tmp_2d667271.c:166:5: error: expected declaration or statement at end of input
